tests/errors/no-int-float-promotion/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0102]: Type mismatch: expected `int`, but found `float`.
  ╭─▸ tests/errors/no-int-float-promotion/main.pa:1:16
  │
1 │ def main = 2 + 3.5
  │                ^^^
  │
  ╰─ note: Pluma never promotes between `int` and `float` automatically; convert explicitly with `math.to-float` or `math.to-int`.
